# molli

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  context.md  eval_results.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: feature.yml  spike.yml  ticket-investigation.yml
.github/workflows/: ci.yml  deploy-chat-service.yml  deploy-sync-job.yml  test-wif.yml
.postman/: resources.yaml
chat-service/: Dockerfile  README.md  pyproject.toml
chat-service/app/: gemini_client.py  main.py
chat-service/app/cards/: answer_card.py  dialog.py  form_options.py  reset_card.py  structured_requests.py  text.py  ticket_analysis_adapter.py  ticket_mapper.py  ticket_prefill.py
chat-service/app/tools/: rag_answer.py  rag_latency_check.py
chat-service/tests/: test_dialog_prefill.py  test_rag_answer.py  test_smoke.py  test_structured_tests.py  test_text.py
docs/: architecture.md  day-1-setup.md  gcp-setup.md  guardrail-eval-prompts.md  guardrails-design.md  runbook.md  ticket-investigation.md
docs/spikes/: document360-api.md  freshservice-api.md  gemini-function-calling.md  rag-answer-pipeline.md  rag-retrieval-check.md
dotgithub/.github/: CODEOWNERS  pull_request_template.md
dotgithub/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  task.yml
infra/: README.md
infra/terraform/: main.tf
postman/collections/Doc 360/: New Request-1.request.yaml  New Request-2.request.yaml  New Request.request.yaml
postman/collections/Doc 360/.resources/: definition.yaml
postman/collections/Freshservice/: 1.1.request.yaml  Create New Ticket (TEST).request.yaml  New Request.request.yaml
postman/collections/Freshservice/.resources/: definition.yaml
postman/collections/Molli/: 1.1.request.yaml  New Request-1.request.yaml  New Request-2.request.yaml
postman/collections/Molli/.resources/: definition.yaml
postman/collections/New Collection/: https-molli-chat-service-jl5lcjbnla-uc.a.run.app-health.request.yaml
postman/collections/New Collection/.resources/: definition.yaml
scripts/: bootstrap.sh  explore_d360.py  explore_freshservice.py
scripts/spikes/: gemini_function_calling.py  rag_retrieval_check.ipynb  vector_search_test.py
shared/: README.md  pyproject.toml
shared/molli_shared/: chunk_store.py  config.py  conversation_store.py  intent.py  intent_eval.py  query_rewrite.py  ticket_analysis.py  topic_detection.py  vertex_retry.py
shared/molli_shared/clients/: document360.py  freshservice.py  gmail.py  mock_ticketing.py  ticketing.py
shared/molli_shared/guardrails/: base.py  chain.py  data_priv.py  dlp.py  escalation.py  eval_harness.py  fair_housing.py  fcra.py  hr_legal.py  llm_classifier.py  mental_health.py  osha.py
shared/molli_shared/retrieval/: __init__.py  embedding.py  index_store.py
shared/molli_shared/schemas/: article.py  factories.py  ticket.py
shared/tests/: conftest.py  test_conversation_memory.py  test_dlp.py  test_document360.py  test_freshservice_client.py  test_intent.py  test_ticket_schemas.py
shared/tests/fixtures/freshservice/: get_ticket.json  list_requesters.json
shared/tests/guardrails/: test_data_priv.py  test_escalation.py  test_fair_housing.py  test_false_positives.py  test_fcra.py  test_hr_legal.py  test_llm_classifier.py
sync-job/: Dockerfile  README.md  pyproject.toml
sync-job/app/: main.py
sync-job/sync_job/: __init__.py  chunking.py  embedding.py  index_store.py  main.py  manual_ingest.py  query_test.py  rag_retrieval_check.py  watermark.py
