[project]
name = "molli-workspace"
version = "0.0.0"
description = "Molli monorepo workspace root"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.6.0",
]

[tool.uv.workspace]
members = ["chat-service", "sync-job", "shared"]

[tool.uv.sources]
molli-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "httpx>=0.27",         # for testing FastAPI
    "respx>=0.21",         # mock outbound HTTP
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RET", "SIM"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["chat-service/tests", "sync-job/tests", "shared/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["chat-service/app", "sync-job/app", "shared/molli_shared"]
omit = ["**/tests/**", "**/__init__.py"]
