[project]
name = "molli-workspace"
version = "0.0.0"
description = "Molli monorepo workspace root"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=2.6.0",
    "pypdf>=6.14.2",
]

[tool.uv.workspace]
members = ["chat-service", "sync-job", "shared"]

[tool.uv.sources]
molli-shared = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.7",
    "httpx>=0.27",         # for testing FastAPI
    "respx>=0.21",         # mock outbound HTTP
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RET", "SIM"]
ignore = ["S101", "E501"]  # allow assert in tests; ignore line-length

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*", "*.tests.*", "chat-service.tests.*", "shared.tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --import-mode=importlib"
testpaths = ["chat-service/tests", "sync-job/tests", "shared/tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["chat-service/app", "sync-job/app", "shared/molli_shared"]
omit = ["**/tests/**", "**/__init__.py"]
