[project]
name = "chat-service"
version = "0.1.0"
description = "Google Chat-facing service for Molli"
requires-python = ">=3.12"
dependencies = [
    "molli-shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "google-cloud-aiplatform>=1.60",
    "google-auth>=2.30",
    "google-cloud-firestore>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
