[project]
name = "molli-shared"
version = "0.1.0"
description = "Shared clients, schemas, and guardrails for Molli"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "httpx>=0.27",
    "google-cloud-secret-manager>=2.20",
    "structlog>=24.1",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "google-cloud-dlp>=3.36.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["molli_shared"]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-httpx>=0.30",
  "python-dotenv>=1.0",
]
[tool.ruff.lint]
ignore = ["E501"]
