[project]
name = "sync-job"
version = "0.1.0"
description = "Daily Document360 -> Vector Search sync job for Molli"
requires-python = ">=3.12"
dependencies = [
    "molli-shared",
    "google-cloud-aiplatform>=1.60",
    "tiktoken>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
